welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:1: error: Missing closing brace `}' assumed here
def maxMod5(a:Int, b:Int):Int = {
^